@@ -1,3 +1,4 @@
+* Display revision on dialog
 * Support empty value for timedelta converter
 * Unify PYSON string format
 
